# cursor-mcp-examples

./: .gitignore  README.md  TROUBLESHOOTING.md  pyproject.toml  pyrightconfig.json  ruff.toml
configs/: README.md
examples/: README.md  workflow_examples.md
setup/: SETUP_GUIDE.md  mcp.json.example
setup/cursor_rules/: always_rules.mdc  git_rules.mdc  linear_rules.mdc  python_general_rules.mdc
