[project]
name = "cursor-mcp-examples"
version = "0.1.0"
authors = [{ name = "Nir Ben-Zvi", email = "me@nirbenzvi.com" }]
description = "Cusor MCP Examples"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy==2.2.6",
    "pandas==2.2.3",
    "openai==1.76.0",
    "python-dotenv==1.0.1",
    "hydra-core==1.3.2",
    "tenacity==9.0.0",
    "langchain==0.3.9",
    "joblib==1.4.2",
    "tqdm==4.67.1",
    "termcolor==2.5.0",
    "loguru==0.7.3",
    "langchain-openai==0.3.14",
    "langchain-anthropic==0.3.14",
    "langchain-text-splitters==0.3.8",
    "fastembed==0.7.0",
    "lxml==5.4.0",
    "bs4==0.0.2",
    "langchain-community==0.3.9",
    "langchain-mcp-adapters==0.1.0",
    "langgraph==0.4.5",
    "langgraph-prebuilt==0.1.8",
    "python-dateutil==2.9.0.post0",
    "pydantic==2.11.5",
    "tiktoken==0.9.0",
    "langchain-aws==0.2.24",
    "scikit-image==0.25.2",
    "telethon==1.40.0",
    "notion-client==2.3.0",
]

[project.scripts]
task-runner = "poethepoet:main"

[tool.uv]
package = true
default-groups = ["task_runner", "dev", "vis"]

[dependency-groups]
task_runner = ["poethepoet==0.34.0"]
dev = [
    "auditwheel==6.4.0",
    "pytest==8.4.0",
    "pytest-asyncio==1.0.0",
    "ruff==0.8.4",
    "pyright==1.1.402",
]
vis = [
    "watchdog==6.0.0",
    "plotly==5.24.1",
    "kaleido==1.0.0rc0",
    "streamlit==1.42.1",
]
cv = [
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "torchvision>=0.20.0",
    "opencv-python>=4.10.0",
]

[tool.uv.sources]
# Torch MacOS vs Linux Sources
torch = [
    { index = "pytorch-cu124", marker = "platform_system == 'Linux' and platform_machine != 'aarch64'" },
    { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "platform_system == 'Linux' and platform_machine != 'aarch64'" },
    { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
]
torchaudio = [
    { index = "pytorch-cu124", marker = "platform_system == 'Linux' and platform_machine != 'aarch64'" },
    { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[tool.poe.tasks]
# Placeholder for tasks/scripts

[tool.ruff]
extend = "ruff.toml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_mcp_examples"]
